Finished base.h, created / working on parser.cpp.
*Note : need to figure out how to install boost library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,30 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
 
 project(RShell)
 
 set(CMAKE_CXX_STANDARD 14)
 
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost)
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    add_executable(main src/main.cpp src/Parser.cpp)
+    target_link_libraries(program ${Boost_LIBRARIES})
+endif()
+
+add_executable(
+        main
+        src/main.cpp
+        src/Parser.cpp
+)
+
 add_executable(
         test
         prototype/main_prototype.cpp
-        prototype/parser.cpp
+        prototype/parser_prototype.cpp
 )
 
 add_executable(
@@ -29,3 +46,4 @@ add_executable(
         all_together_test
         prototype/function_prototype.cpp
 )
+
